--- a/public/styles.css
+++ b/public/styles.css
@@ -132,11 +132,12 @@ header {
   background: url("assets/hero.jpg");
   background-size: cover;
   background-position: center;
-  height: 95vh;
+  position: relative;
+  height: 90vh;
   width: 100%; }
   header .wrapper {
     position: relative;
-    height: 95vh; }
+    height: 90vh; }
 
 nav {
   -webkit-box-pack: justify;
@@ -159,14 +160,27 @@ nav {
 
 .header-text {
   position: absolute;
-  bottom: 15%;
+  bottom: 22%;
   right: 0;
   text-align: right; }
   .header-text > h1 {
     font-size: 80px; }
 
+.firstSVG {
+  width: 100%;
+  height: 110px;
+  background: transparent;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  fill: #fcfcfc; }
+
 * {
   font-family: 'Montserrat', sans-serif; }
+
+body {
+  background: #fcfcfc; }
 
 h1, h2 {
   font-family: 'Alegreya Sans SC', sans-serif; }
@@ -248,7 +262,14 @@ main > section {
 .btn-light {
   background: none;
   border: 1px solid #ff1744;
-  color: #ff1744; }
+  color: #ff1744;
+  transition: 0.4s; }
+
+.btn-light:hover {
+  background: #ff1744;
+  color: #fcfcfc;
+  cursor: pointer;
+  box-shadow: 0 0 5px 1px #fcfcfc; }
 
 .about-box .about-photo {
   width: 30%;
@@ -365,9 +386,53 @@ main > section {
 .photo2 {
   background-image: url("assets/photo2.jpg"); }
 
+.photo3 {
+  background-image: url("assets/photo3.jpg"); }
+
+.photo4 {
+  background-image: url("assets/photo4.jpg"); }
+
+.photo5 {
+  background-image: url("assets/photo5.jpg"); }
+
+.photo6 {
+  background-image: url("assets/photo6.jpg"); }
+
 .moreCell {
-  transition: 13s; }
+  display: none; }
 
 .hidden {
   display: none;
   transition: 1s; }
+
+.posr {
+  position: relative;
+  padding: 130px 0; }
+
+.secondSVG {
+  width: 100%;
+  height: 110px;
+  background: #685e5e;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  fill: #fcfcfc; }
+
+.thirdSVG {
+  width: 100%;
+  height: 110px;
+  background: #685e5e;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  fill: #e8e8e8; }
+
+.fourthSVG {
+  width: 100%;
+  height: 110px;
+  background: #fcfcfc;
+  position: absolute;
+  top: 0;
+  fill: #e8e8e8; }
