--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -2,11 +2,12 @@ header {
 	background: url('assets/hero.jpg');
 	background-size: cover;
 	background-position: center;
-	height: 95vh;
+	position: relative;
+	height: 90vh;
 	width: 100%;
 	.wrapper {
 		position: relative;
-		height: 95vh;
+		height: 90vh;
 	}
 }
 
@@ -33,10 +34,22 @@ nav {
 
 .header-text {
 	position: absolute;
-	bottom: 15%;
+	bottom: 22%;
 	right: 0;
 	text-align: right;
 	&>h1 {
 		font-size: 80px;
 	}
+}
+
+
+.firstSVG {
+	width: 100%;
+	height: 110px;
+	background: transparent;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	fill: $white;
 }
