--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,9 @@
 	font-family: 'Montserrat', sans-serif;
 }
 
+body {
+	background: $white;
+}
 h1,h2 {
 	font-family: 'Alegreya Sans SC', sans-serif;
 }
@@ -92,8 +95,16 @@ main>section {
 	background: none;
 	border: 1px solid $accentColor;
 	color: $accentColor;
+	transition: 0.4s;
 }
 
+.btn-light:hover {
+	background: $accentColor;
+	color: $white;
+	cursor: pointer;
+	box-shadow: 0 0 5px 1px $white;
+	// border: none;
+}
 
 
 // -------------------------------------- //
@@ -222,11 +233,63 @@ main>section {
 	background-image: url('assets/photo2.jpg');
 }
 
+.photo3 {
+	background-image: url('assets/photo3.jpg');
+}
+
+.photo4 {
+	background-image: url('assets/photo4.jpg');
+}
+
+.photo5 {
+	background-image: url('assets/photo5.jpg');
+}
+
+.photo6 {
+	background-image: url('assets/photo6.jpg');
+}
+
 .moreCell {
-	transition: 13s;
+	// transition: 5s;
+	display: none;
 }
 .hidden {
 	display: none;
 	transition: 1s;
 }
 
+.posr {
+	position: relative;
+	padding: 130px 0;
+}
+
+.secondSVG {
+	width: 100%;
+	height: 110px;
+	background: $darkGrey;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	fill: $white;
+}
+
+.thirdSVG {
+	width: 100%;
+	height: 110px;
+	background: $darkGrey;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	fill: $lightGrey;
+}
+
+.fourthSVG {
+	width: 100%;
+	height: 110px;
+	background: $white;
+	position: absolute;
+	top: 0;
+	fill: $lightGrey;
+}
