--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -1,5 +1,6 @@
 header {
-	background: url('assets/hero.jpg');
+	background-image: url('assets/hero2.jpg');
+	background-attachment: fixed;
 	background-size: cover;
 	background-position: center;
 	position: relative;
@@ -11,10 +12,26 @@ header {
 	}
 }
 
+
+
+
 nav {
+	position: fixed;
+	left: 0;
+	right: 0;
+	padding: 0 5%;
 	justify-content: space-between;
 	align-items: center;
-	height: 75px;
+	height: 95px;
+	z-index: 99999;
+	a {
+		color: black;
+	}
+}
+
+.main-nav-scrolled {
+	background: beige;
+	height: 60px;
 }
 
 .logo {
@@ -42,7 +59,6 @@ nav {
 	}
 }
 
-
 .firstSVG {
 	width: 100%;
 	height: 110px;
@@ -52,4 +68,71 @@ nav {
 	left: 0;
 	right: 0;
 	fill: $white;
+}
+
+#detailPage header {
+	background: salmon;
+	height: 60vh;
+	.wrapper {
+		height: 60vh;
+		.header-text {
+			top: 50%;
+			right: 50%;
+			transform: translate(50%, -50%);
+			text-align: center;
+			&>h1 {
+				font-size: 60px;
+			}
+		}
+	}
+	
+}
+
+.hamburgerMenu {
+	display: none;
+	div {
+			width: 40px;
+			height: 5px;
+			background: red;
+			margin-bottom: 6px;
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+}
+
+@media (max-width: 569px) {
+	ul.nav-bar.fl-row {
+		display: none;
+		position: absolute;
+		top: 60px;
+		left: 0;
+		right: 0;
+		padding: 0 5%;
+		justify-content: center;
+		background: green;
+		flex-direction: row;
+	}
+	
+	.hamburgerMenu {
+		display: block;
+	}
+
+	.header-text {
+		h1 {
+			font-size: 60px;
+		}
+		h2 {
+			font-size: 20px;
+		}
+	}
+}
+
+@media (max-width: 440px) {
+	.nav-bar li {
+		margin: 0;
+		a {
+			font-size: 14px;
+		}
+	}
 }
