--- a/src/styles.scss
+++ b/src/styles.scss
@@ -106,11 +106,60 @@ main>section {
 	// border: none;
 }
 
+.secondSVG {
+	width: 100%;
+	height: 110px;
+	background: $darkGrey;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	fill: $white;
+}
+
+.thirdSVG {
+	width: 100%;
+	height: 110px;
+	background: $darkGrey;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	fill: $white;
+}
+
+.fourthSVG {
+	width: 100%;
+	height: 110px;
+	background: $darkGrey;
+	position: absolute;
+	top: 0;
+	fill: $white;
+}
+
+
+
+
+
+.sectionTitle {
+	align-self: center;
+	margin: 0 0 50px;
+	position: relative;
+	.keyline {
+		position: absolute;
+		left: 0;
+	}
+}
+
 
 // -------------------------------------- //
 
 
+//********  About Section section  ********//
+
+
 .about-box {
+
 	.about-photo {
 		width: 30%;
 		margin-right: 20px;
@@ -120,17 +169,38 @@ main>section {
 		width: 70%;
 		& p {
 			width: 50%;
+			padding: 0 10px;
+		}
+		& p:nth-of-type(2) {
+			position: relative;
 		}
 	}
 }
 
+.viewCV {
+	margin-top: 10px;
+	position: absolute;
+	left: 15%;
+	bottom: 15%;
+}
 
-.sectionDarkGrey .wrapper, .sectionGrey .wrapper {
+
+.sectionDarkGrey .wrapper, .sectionGrey .wrapper, .photoDiv .wrapper {
 	display: flex;
 	flex-direction: column;
+
 	text-align: center;
 }
-.main-carousel {
+
+//********  Architecture section  ********//
+
+
+.archDiv .wrapper {
+	width: 80%;
+}
+
+
+.main-carousel-first {
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
@@ -153,15 +223,15 @@ main>section {
 	}
 }
 
-.carousel-cell {
+.carousel-cell-first {
 	margin-bottom: 60px;
 	width: calc(50% - 30px);
-	height: 300px;
+	height: 250px;
 	// min-width: 450px; 
 	overflow: hidden;
 	position: relative;
 }
-.carousel-cell:nth-of-type(even) {
+.carousel-cell-first:nth-of-type(even) {
 	align-self: flex-end;
 	margin-left: auto;
 }
@@ -203,51 +273,33 @@ main>section {
 }
 
 
-.photo-section {
-	.main-carousel {
-		flex-wrap: nowrap;
-	}
+//********  Photography section  ********//
 
-	.carousel-image {
-		height: 100%;
-	}
-	
-	.fa-chevron-circle-right {
-		right: -60px;
-	}
-	.fa-chevron-circle-left {
-		left: -60px;
-	}
-
-}
-.photo-section .carousel-description {
-		transition: 0.4s;
-		height: 50px;
-	}
-
-.photo1 {
-	background-image: url('assets/photo1.jpg');
+.carousel {
+  background: #EEE;
 }
 
-.photo2 {
-	background-image: url('assets/photo2.jpg');
+.carousel-cell {
+  width: 33.3333%;
+  height: 200px;
+  margin-right: 5px;
+  border-radius: 5px;
+  counter-increment: carousel-cell;
+  margin-bottom: 0;
 }
 
-.photo3 {
-	background-image: url('assets/photo3.jpg');
+.cell1 {
+	background-image: url('../public/assets/project1.jpg');
+	background-size: cover;
+	background-position: center;
+}
+.cell2 {
+	background-image: url('../public/assets/project2.jpg');
+	background-size: cover;
+	background-position: center;
 }
 
-.photo4 {
-	background-image: url('assets/photo4.jpg');
-}
 
-.photo5 {
-	background-image: url('assets/photo5.jpg');
-}
-
-.photo6 {
-	background-image: url('assets/photo6.jpg');
-}
 
 .moreCell {
 	// transition: 5s;
@@ -260,36 +312,136 @@ main>section {
 
 .posr {
 	position: relative;
-	padding: 130px 0;
+	padding: 150px 0;
 }
 
-.secondSVG {
-	width: 100%;
-	height: 110px;
-	background: $darkGrey;
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	fill: $white;
+.aboutDiv, .photoDiv {
+	padding: 80px 0;
 }
 
-.thirdSVG {
-	width: 100%;
-	height: 110px;
-	background: $darkGrey;
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	fill: $lightGrey;
-}
-
-.fourthSVG {
-	width: 100%;
-	height: 110px;
+.photoDiv {
 	background: $white;
-	position: absolute;
-	top: 0;
-	fill: $lightGrey;
+}
+
+.resumeDiv {
+	padding: 150px 0 80px;
+}
+
+.contactDiv {
+	padding: 150px 0 50px;
+	background: $darkGrey;
+}
+
+
+
+//Project Page
+
+#detailPage {
+	div {
+		text-align: center;
+		p {
+			width: 100%;
+		}
+	}
+	.sectionTitle {
+		margin-bottom: 25px;
+	}
+}
+
+.projectDetails {
+	display: flex;
+	justify-content: space-between;
+	.eachDetail {
+		width: 25%;
+		text-align: center;
+		padding: 20px;
+		border-right: 1px solid grey;
+		font-size: 12px;
+		&:last-child {
+			border-right: none;
+		}
+		p:first-child {
+			font-size: 14px;
+			font-weight: 300!important;
+		}
+	}
+}
+
+.detailPhotoContainer {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	line-height: 0;
+	column-count: 5;
+	column-gap: 0px;
+	.detailPic {
+		display: inline-block;
+		margin-bottom: 10px;
+		height: 300px;
+		img {
+			width: 100%;
+			height: 100%;
+			// position: absolute;
+		}
+	}
+	.large {
+		width: calc(65% - 5px);
+	}
+	.small {
+		width: calc(35% - 5px);
+	}
+}
+
+
+@media (max-width: 990px) {
+	// .about-box {
+	// 	flex-wrap: wrap;
+	// 	justify-content: center;
+	// 	.about-photo {
+	// 		width: 35%;
+	// 	}
+	// 	.about-text {
+	// 		width: 100%;
+	// 		p {
+	// 			width: 50%;
+	// 		}
+	// 	}
+	// }
+	.about-box {
+		justify-content: space-between;
+		.about-text {
+			display: flex;
+			flex-direction: column;
+			width: 70%;
+			p {
+				width: 100%;
+				&:last-child {
+					padding-bottom: 70px;
+				}
+			}
+		}
+		.about-photo {
+			width: 45%;
+		}
+	}
+	.viewCV {
+		bottom: 0;
+	}
+}
+
+@media (max-width: 840px) {
+	.about-box {
+		flex-direction: column;
+		// justify-content: center;
+		.about-text {
+			width: 100%;
+		}
+		.about-photo {
+			margin: 0 auto;
+		}
+	}
+	.viewCV {
+		left: 50%;
+		transform: translateX(-50%);
+	}
 }
